# versatile-data-kit

./: .gitignore  .gitlab-ci.yml  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  CODE-OF-CONDUCT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  NOTICE.txt  Processing_data_using_SQl_and_local_database.ipynb  README.md  README_old.md  READMEv2.md  _config.yml  airflow-comparison.md  airflow_blogpost.md  airflow_blogpost.txt  comparison_blogpost.md  comparison_blogpost.txt  hook-executions.md  hook-mapping.md  ideas.txt  insert_load.patch  script.md
projects/vdk-control-cli/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  version.txt
projects/vdk-control-cli/cicd/: build.sh  release_test_heartbeat_config.ini
projects/vdk-control-cli/tests/: conftest.py
projects/vdk-control-cli/tests/resources/: unused.py
projects/vdk-control-cli/tests/resources/sample_job_module/: 1_new_module_step.py
projects/vdk-control-cli/tests/resources/test-broken-vdk-config/: vdk-configuration.ini
projects/vdk-control-cli/tests/resources/test-job/: config.ini
projects/vdk-control-cli/tests/resources/test-job-python-version/: config.ini
projects/vdk-control-cli/tests/resources/test-vdk-config/: vdk-configuration.ini
projects/vdk-control-cli/tests/taurus/vdk/: test_utils.py
projects/vdk-control-cli/tests/vdk/internal/: test_utils.py
projects/vdk-core/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  README_PLUGINS.md  requirements.txt  setup.cfg  setup.py
projects/vdk-core/cicd/: Dockerfile-vdk-base  build.sh  deploy-base-vdk-image.sh  prepare-vdk-core-release.sh  release-vdk-core.sh  release_acceptance_test_heartbeat_config.ini  set-patch-version.sh  simple-functional-test.sh
projects/vdk-core/cicd/example-job/: 10_create_orders_table.sql  20_insert_data_into_orders_table.sql  30_check_orders_table.py  config.ini
projects/vdk-core/docs/: plugin-cli-lifecycle.gliffy  simple-data-job-lifecycle.gliffy  vdk-components.gliffy
projects/vdk-core/plugins/: .plugin-common.yml  README.md  build-plugin.sh
projects/vdk-core/plugins/example-command-defaults-hook/: defaults_hook.py  setup.py
projects/vdk-core/plugins/plugin-template/: .plugin-ci.yml  README.md  setup.py
projects/vdk-core/plugins/quickstart-vdk/: .plugin-ci.yml  README.md  setup.py
projects/vdk-core/plugins/quickstart-vdk/tests/: test_dummy.py
projects/vdk-core/plugins/taurus-vdk/: .plugin-ci.yml  requirements.txt  setup.py
projects/vdk-core/plugins/taurus-vdk/tests/: test_plugin_template.py
projects/vdk-core/plugins/vdk-csv/: .plugin-ci.yml  README.md  requirements.txt  setup.py
projects/vdk-core/plugins/vdk-greenplum/: .plugin-ci.yml  README.md  setup.py
projects/vdk-core/plugins/vdk-greenplum/tests/: conftest.py  docker-compose.yml
projects/vdk-core/plugins/vdk-impala/: .plugin-ci.yml  README.md  setup.py
projects/vdk-core/plugins/vdk-impala/tests/: conftest.py  docker-compose.yml
projects/vdk-core/plugins/vdk-ingest-file/: .plugin-ci.yml  README.md  setup.py
projects/vdk-core/plugins/vdk-ingest-file/tests/: test_ingestion_to_file.py
projects/vdk-core/plugins/vdk-ingest-http/: .plugin-ci.yml  README.md  requirements.txt  setup.py
projects/vdk-core/plugins/vdk-ingest-http/tests/: test_ingest_over_http.py
projects/vdk-core/plugins/vdk-logging-json/: .plugin-ci.yml  README.md  requirements.txt  setup.py
projects/vdk-core/plugins/vdk-logging-json/tests/: test_logging_json.py
projects/vdk-core/plugins/vdk-logging-ltsv/: .plugin-ci.yml  README.md  setup.py
projects/vdk-core/plugins/vdk-logging-ltsv/tests/: test_logging_ltsv.py
projects/vdk-core/plugins/vdk-plugin-control-cli/: .plugin-ci.yml  README.md  requirements.txt  setup.py
projects/vdk-core/plugins/vdk-plugin-control-cli/tests/: test_control_service_properties.py  test_execution_skip.py  test_properties_job.py  test_vdk_plugin_control_cli.py
projects/vdk-core/plugins/vdk-postgres/: .plugin-ci.yml  README.md  requirements.txt  setup.py
projects/vdk-core/plugins/vdk-postgres/tests/: conftest.py  docker-compose.yml  test_vdk_postgres_utils.py
projects/vdk-core/plugins/vdk-server/: .plugin-ci.yml  MANIFEST.in  requirements.txt  setup.py
projects/vdk-core/plugins/vdk-server/tests/: test_plugin_template.py
projects/vdk-core/plugins/vdk-snowflake/: .plugin-ci.yml  README.md  requirements.txt  setup.py
projects/vdk-core/plugins/vdk-snowflake/tests/: test_snowflake_connection.py  test_snowflake_plugin.py
projects/vdk-core/plugins/vdk-sqlite/: .plugin-ci.yml  README.md  setup.py
projects/vdk-core/plugins/vdk-sqlite/tests/: test_sqlite_plugin.py
projects/vdk-core/plugins/vdk-test-utils/: .plugin-ci.yml  README.md  setup.py
projects/vdk-core/plugins/vdk-test-utils/tests/: test_vdk_test_utils.py
projects/vdk-core/plugins/vdk-trino/: .plugin-ci.yml  MANIFEST.in  README.md  requirements.txt  setup.py
projects/vdk-core/plugins/vdk-trino/tests/: conftest.py  docker-compose.yml  test_ingest_to_trino.py  test_vdk_templates.py  test_vdk_trino_lineage.py  test_vdk_trino_utils.py
projects/vdk-core/src/: __main__.py
projects/vdk-core/src/taurus/api/: job_input.py
projects/vdk-core/src/taurus/vdk/: cli_entry.py  vdk_build_info.py
projects/vdk-core/src/vdk/api/: data_job.py  job_input.py
projects/vdk-core/src/vdk/internal/: cli_entry.py  vdk_build_info.py
projects/vdk-core/tests/: README.md  conftest.py
projects/vdk-heartbeat/: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  heartbeat_config_example.ini  requirements.txt  setup.cfg  setup.py
projects/vdk-heartbeat/cicd/: build.sh  cicd_heartbeat_config.ini
projects/vdk-plugins/vdk-jupyter/vdk-jupyterlab-extension/: .eslintrc.js  .example-job_error.json  .gitignore  .prettierignore  10_notebook.ipynb  LICENSE  README.md  RELEASE.md  Untitled.ipynb  Untitled1.ipynb  babel.config.js  conftest.py  getting-started.ipynb  install.json  jest.config.js  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json  vdk_logs.txt
(+3982 files in other folders)
