# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = vdk-control-cli
version = file: version.txt
description = VDK Control CLI allows user to create, delete, manage and their Data Jobs in Kubernetes runtime.
author = VMware Inc.
# TODO: change to group mail when ready
author-email = aivanov@vmware.com
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/vmware/versatile-data-kit
project-urls =
    Documentation = https://github.com/vmware/versatile-data-kit/wiki
    Source = https://github.com/vmware/versatile-data-kit/projects/vdk-control-cli
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
# setting find_namespace so we can use PEP 420 implicit package
# https://setuptools.readthedocs.io/en/latest/setuptools.html#find-namespace-packages
# specifying __init__.py file to make it a module is no longer necessary.
# It actually can cause issues. Hit this one:
# http://python-notes.curiousefficiency.org/en/latest/python_concepts/import_traps.html#the-init-py-trap
packages = find_namespace:
include_package_data = True
package_dir =
    =src


# Add here dependencies of your project (semicolon/line-separated), e.g.
# by default set them to latest minor (non-breaking) version unless more limited version is specifically required.
install_requires =
    # click 8 has some breaking changes that break vdk-control-cli
    # https://github.com/pallets/click/issues/1960
    click==7.*
    click-log==0.*
    click-spinner==0.*
    requests>=2.25
    setuptools>=47.0
    pluggy==0.*
    vdk-control-service-api==1.0.6
    tabulate
    requests_oauthlib>=1.0
    urllib3>=1.26.5

# Require a specific Python version
python_requires = >=3.7, <3.11

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install vdk-control-cli[PDF]` like:
# PDF = ReportLab; RXP

[options.entry_points]
console_scripts =
    vdkcli = vdk.internal.control.main:run

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --verbose

norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
max-line-length = 120
