# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = vdk-core
version = file: version.txt
description =  Versatile Data Kit SDK Core
author = VMware Inc.
author-email = taurus@vmware.com
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/vmware/versatile-data-kit/projects/vdk-core
project-urls =
    Documentation = https://github.com/vmware/versatile-data-kit/projects/vdk-core/README.md
    Source = https://github.com/vmware/versatile-data-kit/projects/vdk-core
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
# setting find_namespace so we can use PEP 420 implicit package
# https://setuptools.readthedocs.io/en/latest/setuptools.html#find-namespace-packages
# For reasoning see http://python-notes.curiousefficiency.org/en/latest/python_concepts/import_traps.html#the-init-py-trap
packages = find_namespace:
include_package_data = True
package_dir =
    =src


# Add here dependencies of your project (semicolon/line-separated), e.g.
# vdk-core is meant to have minimum number of dependencies, and they should not be fixed (so that they can be easily overriden)
# generally outside of click and pluggy, we should not have any
# hence TODO: do we really need tenacity ?
install_requires =
    # click 8 has some breaking changes that break vdk-control-cli
    # https://github.com/pallets/click/issues/1960
    click==8.*
    pluggy
    click_log
    click-plugins
    tenacity
    setuptools

# Require a specific Python version
python_requires = >=3.7, <4



[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install module-name[PDF]` like:
# PDF = ReportLab; RXP
#presto = vdk-presto
#impala = vdk-presto


[options.entry_points]
console_scripts =
    vdk = vdk.internal.cli_entry:main

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --verbose

norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[mypy]
mypy_path = src
warn_return_any = True
warn_unused_configs = True
#disallow_untyped_defs = True
