# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = vdk-heartbeat
version = file: version.txt
description = Versatile Data Kit Heartbeat and Health Test
author = VMware Inc.
author-email = taurus@groups.vmware.com
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/vmware/versatile-data-kit/tree/main/projects/vdk-heartbeat
project-urls =
    Documentation = https://github.com/vmware/versatile-data-kit/wiki/Introduction
    Source = https://github.com/vmware/versatile-data-kit/tree/main/projects/vdk-heartbeat
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
# setting find_namespace so we can use PEP 420 implicit package
# https://setuptools.readthedocs.io/en/latest/setuptools.html#find-namespace-packages
packages = find_namespace:
include_package_data = True
package_dir =
    =src


# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    vdk-control-cli
    thrift_sasl
    impyla
    click
    click-log
    retrying
    requests
    junit-xml

# Require a specific Python version
python_requires = >=3.7, <4



[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install vdk-control-cli[PDF]` like:
# PDF = ReportLab; RXP
trino =
    trino
impala =
    thrift_sasl
    impyla
taurus =
    taurus-vdk

[options.entry_points]
console_scripts =
    vdk-heartbeat = vdk.internal.heartbeat.main:run

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1
