[build-system]
requires = ["hatchling>=1.4.0", "jupyterlab==3.6.3", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "vdk-jupyterlab-extension"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jupyter_server>=1.6,<3",
    "jupyterlab==3.6.3",
    "vdk-control-cli",
    "vdk-core"
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-tornasync",
    "pytest-jupyter",
    "httpretty"
]
# Opinionated dependecies added by VDK dev team that we think make jupyterlab easier and better for users.
opinionated = [
    "jupyterlab_execute_time",
    "lckr-jupyterlab-variableinspector",
    "ipyaggrid",
    # TODO: those are good options for being tested and evaluated
    # jupyterlab-git
    # "pyforest", should automaticcally add imports but did not work well enough when testing. should try again.
    #"jupyterlab-lsp", # improve auto-completion
    # elyra-code-snippet-extension? # looked useful
    # jupyterlab_sql - if integrated with vdk sql
]


[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["vdk_jupyterlab_extension/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"vdk_jupyterlab_extension/labextension" = "share/jupyter/labextensions/vdk-jupyterlab-extension"
"install.json" = "share/jupyter/labextensions/vdk-jupyterlab-extension/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
"jupyter-config/nb-config" = "etc/jupyter/jupyter_notebook_config.d"

[tool.hatch.build.hooks.version]
path = "vdk_jupyterlab_extension/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "vdk_jupyterlab_extension/labextension/static/style.js",
    "vdk_jupyterlab_extension/labextension/package.json",
]
skip-if-exists = ["vdk_jupyterlab_extension/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "vdk_jupyterlab_extension/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"
